Name:               broadcast-chan-conduit
Version:            0.1.0

Homepage:           https://github.com/merijn/broadcast-chan
Bug-Reports:        https://github.com/merijn/broadcast-chan/issues

Author:             Merijn Verstraaten
Maintainer:         Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:          Copyright © 2014-2017 Merijn Verstraaten

License:            BSD3
License-File:       LICENSE

Category:           System
Cabal-Version:      >= 1.10
Build-Type:         Simple
Tested-With:        GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3,
                    GHC == 8.0.2, GHC == 8.2.1, GHC == 8.3.*

Synopsis:           

Description:

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall -O2 -fno-warn-unused-do-bind
  Exposed-Modules:      BroadcastChan.Conduit

  Other-Extensions:     ScopedTypeVariables

  Build-Depends:        base >= 4.5 && < 5
               ,        broadcast-chan == 0.1.1
               ,        conduit == 1.2.*
               ,        resourcet == 1.1.*

Test-Suite conduit
  Default-Language:     Haskell2010
  Type:                 exitcode-stdio-1.0
  Main-Is:              ConduitTest.hs
  GHC-Options:          -Wall -O -fno-warn-unused-do-bind -threaded
  Hs-Source-Dirs:       tests

  Build-Depends:        base
               ,        broadcast-chan-conduit
               ,        broadcast-chan-tests == 0.1.0
               ,        containers == 0.5.*
               ,        conduit == 1.2.*

Source-Repository head
  Type:     git
  Location: ssh://github.com:merijn/broadcast-chan.git

Source-Repository head
  Type:     mercurial
  Location: https://bitbucket.org/merijnv/broadcast-chan
