Cabal-Version:      3.4
Name:               broadcast-chan-conduit
Version:            0.3.0

Homepage:           https://github.com/merijn/broadcast-chan
Bug-Reports:        https://github.com/merijn/broadcast-chan/issues

Author:             Merijn Verstraaten
Maintainer:         Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:          Copyright © 2014-2025 Merijn Verstraaten

License:            BSD-3-Clause
License-File:       LICENSE

Category:           System
Build-Type:         Simple
Tested-With:        GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5,
                    GHC == 8.8.4, GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.7,
                    GHC == 9.4.8, GHC == 9.6.6, GHC == 9.8.4, GHC == 9.10.1,
                    GHC == 9.12.1

Extra-Doc-Files:    CHANGELOG.md

Synopsis:           Conduit-based parallel streaming code for broadcast-chan

Description:
    __WARNING: As of 0.3.0 this package is deprecated, use the sublibrary of
    broadcast-chan directly!__

Library
  Default-Language:     Haskell2010
  Reexported-Modules:   BroadcastChan.Conduit,
                        BroadcastChan.Conduit.Throw

  Build-Depends:        broadcast-chan:conduit

Source-Repository head
  Type:     git
  Location: ssh://github.com:merijn/broadcast-chan.git
