Name:               broadcast-chan-pipes
Version:            0.1.0

Homepage:           https://github.com/merijn/broadcast-chan
Bug-Reports:        https://github.com/merijn/broadcast-chan/issues

Author:             Merijn Verstraaten
Maintainer:         Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:          Copyright © 2014-2017 Merijn Verstraaten

License:            BSD3
License-File:       LICENSE

Category:           System
Cabal-Version:      >= 1.10
Build-Type:         Simple
Tested-With:        GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3,
                    GHC == 8.0.2, GHC == 8.2.1, GHC == 8.3.*

Synopsis:           

Description:

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall -O2 -fno-warn-unused-do-bind
  Exposed-Modules:      BroadcastChan.Pipes

  Other-Extensions:     ScopedTypeVariables

  Build-Depends:        base >= 4.5 && < 5
               ,        broadcast-chan == 0.1.1
               ,        pipes == 4.3.*
               ,        pipes-safe == 2.2.*

Test-Suite pipes
  Default-Language:     Haskell2010
  Type:                 exitcode-stdio-1.0
  Main-Is:              PipeTest.hs
  GHC-Options:          -Wall -O0 -fno-warn-unused-do-bind
  Hs-Source-Dirs:       tests
  Other-Extensions:     RankNTypes
  Build-Depends:        base
               ,        broadcast-chan-pipes
               ,        broadcast-chan-tests == 0.1.0
               ,        containers == 0.5.*
               ,        foldl == 1.3.*
               ,        pipes == 4.3.*
               ,        pipes-safe == 2.2.*

Source-Repository head
  Type:     git
  Location: ssh://github.com:merijn/broadcast-chan.git

Source-Repository head
  Type:     mercurial
  Location: https://bitbucket.org/merijnv/broadcast-chan
